[package]
name = "bevy_df"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5.0"
bevy_ecs_tilemap = { git="https://github.com/StarArawn/bevy_ecs_tilemap.git/", branch="improved-iso" }
bevy_egui = "0.6.0"
bevy-inspector-egui = "0.5.1"
noise = "0.7.0"
num = "0.4.0"
anyhow = "1.0.41"
